--- a/NODE/SPRINT4/package.json
+++ b/NODE/SPRINT4/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0"
   },
   "devDependencies": {
     "jest": "^28.1.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^1.3.3"
   }
 }
