--- a/NODE/SPRINT4/SPRINT 4.2/package.json
+++ b/NODE/SPRINT4/SPRINT 4.2/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^9.0.2",
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.21.1"
   },
   "devDependencies": {
