--- a/NODE/SPRINT4/SPRINT 4.2/package.json
+++ b/NODE/SPRINT4/SPRINT 4.2/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^9.0.2",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.1"
   },
