--- a/NODE/SPRINT4/SPRINT 4.2/app/config/config.json
+++ b/NODE/SPRINT4/SPRINT 4.2/app/config/config.json
@@ -6,5 +6,5 @@
         "password": "ITAcademy",
         "database": "dados_model"
     },
-    "secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "secret": "STRING_SECRET_ITAcademy"
 }
